<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.images.ImageManagerFragment">

    <TextView
        android:id="@+id/image_manager_fragment_images_selected_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/image_manager_images_selected_text"
        app:layout_constraintBottom_toTopOf="@id/image_manager_fragment_get_from_gallery_button"
        android:textSize="@dimen/large_text_size" />


    <Button
        android:id="@+id/image_manager_fragment_get_from_gallery_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image_manager_fragment_take_photo_button"
        style="@style/style_common_styled_button"
        android:text="get from gallery"/>

    <Button
        android:id="@+id/image_manager_fragment_take_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_common_styled_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/image_manager_fragment_take_photo_text"/>

    <Button
        android:id="@+id/image_manager_fragment_upload_selected_images_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/style_common_styled_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_manager_fragment_take_photo_button"
        android:text="@string/image_manager_fragment_upload_photo_text"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader_animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:translationZ="2dp"
        android:background="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loader" />

</androidx.constraintlayout.widget.ConstraintLayout>
