<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiary_blue"
    tools:context=".ui.movies.MoviesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/fragment_movies_top_rated_title_text_view"
        style="@style/style_fragment_movies_section_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_movies_top_rated_title_text"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_fragment_top_rated_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_movies_top_rated_title_text_view" />

    <TextView
        android:id="@+id/fragment_movies_popular_title_text_view"
        style="@style/style_fragment_movies_section_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_movies_popular_title_text"
        app:layout_constraintTop_toBottomOf="@id/movie_fragment_top_rated_recycler_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_fragment_popular_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_movies_popular_title_text_view" />

    <TextView
        android:id="@+id/fragment_movies_recommended_title_text_view"
        style="@style/style_fragment_movies_section_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fragment_movies_recommended_title_text"
        app:layout_constraintTop_toBottomOf="@id/movie_fragment_popular_recycler_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_fragment_recommended_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_movies_recommended_title_text_view" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loader_animation"
        android:layout_width="@dimen/generic_loader_size"
        android:layout_height="@dimen/generic_loader_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loader" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
